# nsw-tas-fuel-api-client

./: Pipfile  pyproject.toml
nsw_tas_fuel/: __init__.py  client.py  const.py  dto.py
scripts/: setup
tests/: conftest.py  test_client.py  test_integration.py
