    [build-system]
    requires = ["setuptools>=64"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "nsw-tas-fuel-api-client"
    version = "0.0.1"
    readme = "README.md"
    description = "Client library for NSW Fuel API"
    authors = [
        { name = "bicycleboy", email = "bicycleboy61@gmail.com" },
        { name = "Nick Whyte", email = "nick@nickwhyte.com" },
    ]
    license = { text = "MIT" }
    requires-python = ">=3.12"
    dependencies = [
        "aiohttp>=3.9",
    ]

    classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python",
        "License :: OSI Approved :: MIT License"
    ]

    [project.urls]
    Homepage = "https://github.com/bicycleboy/nsw-tas-fuel-api-client"

    [project.optional-dependencies]
    test = [
        "pytest",
        "pytest-asyncio",
        "pytest-cov",
        "requests-mock",
        "aioresponses",
        "dotenv",
        "ruff",
        "twine",
    ]

    [tool.setuptools.packages.find]
    where = ["."]
    include = ["nsw_tas_fuel"]

    [tool.pytest.ini_options]
    # Automatically discover tests inside these paths
    testpaths = ["tests"]

    # Markers for async tests, integration, etc.
    markers = [
        "asyncio: mark test as async",
        "integration: mark test as integration-level"
    ]

    # Use a verbose output and colored diff for readability
    addopts = "-v --tb=short --color=yes"

    [tool.pylint.design]
    max-args = 6
